# spry

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  THIRD_PARTY.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml
docs/: 404.md  building-docs.md  getting-started.md  index.md
docs/adr/: 0001-spry-public-api.md
docs/assets/: README.md
docs/assets/wasm/: README.md  demo.html  spry_demos.js  spry_demos.wasm  spry_web_demo.js  spry_web_demo.wasm
docs/contributing/: index.md
docs/examples/: index.md
docs/guides/: animation.md  index.md  input.md  layout.md  renderer-backends.md  text.md  theme-tokens.md  theming.md
docs/stylesheets/: extra.css
docs/widgets/: index.md
examples/: README.md  demo.cpp  gl_demo.cpp  hello.cpp
examples/themes/: daylight.theme  ember.theme  midnight.theme
examples/web/: scenes.h  web_demo.cpp  web_demos.cpp
include/spry/: anim.h  box.h  clipboard.h  color.h  colorpicker.h  combo.h  context.h  data.h  gl_renderer.h  input.h  layout.h  overlay.h  renderer.h  sdl_host.h  sdl_renderer.h  spry.h  text_edit.h  textarea.h  textfield.h  theme.h  theme_tokens.h  widget.h  widgets.h
scripts/: build-web.sh  capture-media.sh  fetch-doxygen-awesome.sh
src/: box.cpp  clipboard.cpp  geometry.cpp  gl_renderer.cpp  sdl_renderer.cpp  text_edit.cpp  textarea.cpp  textfield.cpp  theme.cpp  widget.cpp
tests/: test_data.cpp  test_input.cpp  test_text_edit.cpp  test_theme.cpp  test_widgets.cpp
tools/capture/: capture.cpp
